# test-Agents

./: .env.example  .gitattributes  .gitignore  chain.py  pyproject.toml
data/: init_configs.py
data/configs/: __init__.py  base_config.py  callbacks_config.py  database_config.py  db_config.py  gigachat_config.py  langfuse_config.py  llm_config.py  middleware_config.py  ollama_config.py  redis_config.py  runnable_config.py  tg_config.py
data/llms/: gigachat_llm.py  ollama_llm.py
db/: crud.py  database.py  database_protocol.py  factory.py  models.py  session.py
db/sqlalchemy/: crud.py  models.py  session.py
db/sqlite/: crud.py  manager.py  schemas.py
src/adapters/: __init__.py  base.py  config_adapters.py  structured_ouput.py  structured_output.py  tools_adapter.py
src/app/: main.py  telegram_queue.py
src/app/queue/: scheduler.py  tasks.py  utils.py
src/app/routers/: gmail.py  router_models.py  telegram.py
src/core/agents/: agent_singleton.py  dialog_agent.py  models.py  prompts.py  summary_agent.py
src/core/agents/llms/: gigachat_llm.py  ollama_llm.py
src/core/agents/models/: base.py  custom.py  exc.py
src/core/agents/tools/: base_tools.py
src/enum/: client.py  db.py  exc.py  system_td.py  tg.py
src/exceptions/: agent_exp.py  config_exp.py
src/factories/: agent_factory.py  client_factory.py
src/mcp/: server.py
src/models/: __init__.py  client_model.py  messages.py
src/models/base/: message_parser.py  message_sender.py
src/utils/: factrory.py  llm_adapter.py
utils/: database_repo.py  decorators.py  retry_handlers.py
