[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.0",
    "fastapi>=0.124.4",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "uvicorn>=0.38.0",
    "ngrok>=1.7.0",
    "httpx>=0.28.1",
    "aiohttp>=3.13.2",
    "aiosqlite>=0.22.0",
    "sqlalchemy>=2.0.45",
    "asyncpg>=0.31.0",
    "langgraph>=1.0.5",
    "langchain-community>=0.4.1",
    "aiogram>=3.23.0",
    "gigachat>=0.1.43",
    "langchain>=1.2.0",
    "langchain-experimental>=0.4.1",
    "huggingface>=0.0.1",
    "transformers[torch]>=4.57.6",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "hf-xet>=1.2.0",
]
